# Garbage-Collector

./: .gitignore  CMakeLists.txt  README.md
examples/: example.c
include/: gc.h
src/: gc.c
